--- a/SportStatTracker/SportStatTracker/Views/TeamPage.xaml
+++ b/SportStatTracker/SportStatTracker/Views/TeamPage.xaml
@@ -15,7 +15,7 @@
 
     <!--LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot">
-        <phone:Panorama Title="my application">
+        <phone:Panorama Title="Sports Stat Tracker" x:Name="PanoramaControl">
 
             <!--Panorama item one-->
             <phone:PanoramaItem Header="games">
